k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cardapio
  labels:
    name: cardapio
    app: cardapio
