k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: cardapio
  labels:
    app: mysql
spec:
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
  sessionAffinity: None
  internalTrafficPolicy: Cluster
