k8s/ingress-fixed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cardapio-ingress-fixed
  namespace: cardapio
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.tls.options: "default"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - food.546digitalservices.com
  rules:
    - host: food.546digitalservices.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cardapio-front-new-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cardapio-backend-service-fixed
                port:
                  number: 80
          - path: /old
            pathType: Prefix
            backend:
              service:
                name: cardapio-frontend-service
                port:
                  number: 80
