k8s/traefik-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-to-https-redirect
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      services:
        - name: noop
          port: 8080
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
---
apiVersion: v1
kind: Service
metadata:
  name: noop
  namespace: kube-system
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: traefik
